testdata/baselines/reference/submodule/conformance/jsdocTypeReferenceToMergedClass.errors.txt
jsdocTypeReferenceToMergedClass.js(2,12): error TS2503: Cannot find namespace 'Workspace'.
jsdocTypeReferenceToMergedClass.js(6,11): error TS2339: Property 'Project' does not exist on type '{}'.
jsdocTypeReferenceToMergedClass.js(7,11): error TS2339: Property 'Project' does not exist on type '{}'.


==== jsdocTypeReferenceToMergedClass.js (3 errors) ====
    var Workspace = {}
    /** @type {Workspace.Project} */
               ~~~~~~~~~
!!! error TS2503: Cannot find namespace 'Workspace'.
    var p;
    p.isServiceProject()
    
    Workspace.Project = function wp() { }
              ~~~~~~~
!!! error TS2339: Property 'Project' does not exist on type '{}'.
    Workspace.Project.prototype = {
              ~~~~~~~
!!! error TS2339: Property 'Project' does not exist on type '{}'.
      isServiceProject() {}
    }
    